--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /built/engine_theo_master_peace
 /built/engine_theo_master_peace.exe
 
+
 /built/font_reader
 /built/font_reader.exe
 
 
+/built/font_reader_2
+/built/font_reader_2.exe
