--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
                 "-I${workspaceFolder}/src/Theo_Master_Peace_Core",
                 "-I${workspaceFolder}/include",
                 "-I${workspaceFolder}/include/freetype",
+                "-I${workspaceFolder}/include/bullet3",
                 "-llua",
                 "-lglfw",
                 "-lGLEW",
