--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,7 @@
                 "-I${workspaceFolder}/src/Theo_Master_Peace_Core",
                 "-I${workspaceFolder}/include",
                 "-I${workspaceFolder}/include/freetype",
+                "-I${workspaceFolder}/include/bullet3",
                 "-llua",
                 "-lglfw",
                 "-lGLEW",
