--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -96,6 +96,9 @@
         "typeindex": "cpp",
         "variant": "cpp",
         "regex": "cpp",
-        "*.def": "cpp"
+        "*.def": "cpp",
+        "*.ipp": "cpp",
+        "ranges": "cpp",
+        "span": "cpp"
     }
 }
