--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -103,6 +103,7 @@
         "strstream": "cpp",
         "source_location": "cpp",
         "hash_map": "cpp",
-        "*.inc": "cpp"
+        "*.inc": "cpp",
+        "stdfloat": "cpp"
     }
 }
