--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,6 +18,7 @@
                 "-I${workspaceFolder}/src/Theo_Master_Peace_Core/components",
                 "-I${workspaceFolder}/include",
                 "-I${workspaceFolder}/include/freetype",
+                "-I${workspaceFolder}/include/imgui",
                 "-I${workspaceFolder}/include/bullet3",
                 "-llua",
                 "-lglfw",
