--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,5 +105,6 @@
         "hash_map": "cpp",
         "*.inc": "cpp",
         "stdfloat": "cpp"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
