--- a/launcher/makefile
+++ b/launcher/makefile
@@ -10,10 +10,10 @@ LPATHW := /libs/x86_64/windows/dll
 compile_cmd = gcc
 OS := $(shell uname -s)
 ifeq ($(OS),Windows_NT)	
-
+	compile_cmd += launch.c -o ../$(NAME).exe -DEPATH='"$(EPATH)"' -DCPATH='"$(CPATH)"' -DLPATHL='"$(LPATHL)"' -DLPATHW='"$(LPATHW)"'
 endif
 ifeq ($(findstring MINGW,$(OS)),MINGW)
-
+	compile_cmd += launch.c -o ../$(NAME).exe -DEPATH='"$(EPATH)"' -DCPATH='"$(CPATH)"' -DLPATHL='"$(LPATHL)"' -DLPATHW='"$(LPATHW)"'
 endif
 ifeq ($(OS),Linux)
 	compile_cmd += launch.c -o ../$(NAME) -DEPATH='"$(EPATH)"' -DCPATH='"$(CPATH)"' -DLPATHL='"$(LPATHL)"' -DLPATHW='"$(LPATHW)"'
