--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -111,7 +111,8 @@
         "csetjmp": "cpp",
         "scoped_allocator": "cpp",
         "stdio.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "math.h": "c"
     },
     "cmake.configureOnOpen": false,
     "Lua.diagnostics.disable": [
